fixed body alignmnent issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,8 +28,8 @@ html {
 body {
   background-color: $backgroundColour;
   font-family: 'bignoodletitlingregular', sans-serif;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
 }
 
 header {
